# Final-Project

./: .gitignore  README.md  config.yaml  pyproject.toml
data/clean/: address_df.csv  cities_df.csv  country_df.csv  cuisines_df.csv  df_final_checkpoint.csv  df_final_checkpoint_v2.csv  df_final_clean.csv  price_level_df.csv  province_df.csv  quality_df.csv  region_df.csv  restaurant_cuisines_df.csv  restaurants_df.csv  tripadvisor_spain.csv  zip_code_df.csv
notebooks/: EDA.ipynb
