[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "mysql-connector-python>=9.6.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "polars>=1.39.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "scikit-posthocs>=0.12.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.49",
]
